--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,3 +1,5 @@
+/* Navbar */
+
 #navbar .logo {
     float: none;
     text-align: center;
@@ -10,4 +12,24 @@
 #navbar ul li a {
     padding: 5px;
     border-bottom: #444 dotted 1px;
+}
+
+/* Home Info */
+#home-info {
+    height: 475px;
+}
+
+#home-info .info-img {
+    display: none;
+}
+
+#home-info .info-content {
+    float: none;
+    width: 100%;
+}
+
+/* Boxes */
+.box {
+    float: none;
+    width: 100%;
 }
