--- a/css/mobile.css
+++ b/css/mobile.css
@@ -33,3 +33,25 @@
     float: none;
     width: 100%;
 }
+
+
+/* About Page */
+#about-info .info-right,
+#about-info .info-left {
+    float: none;
+    width: 100%;
+}
+
+#about-info .info-right {
+    margin-top: 30px;
+}
+
+.l-heading {
+    text-align: center;
+}
+
+
+/* Contact Page */
+#contact-info .box {
+    border-bottom: #444 dotted 1px;
+}
